Add thread for file operations and extensively modified the Dcap engine code - Tested working.

--- a/Engines/DCap/CMakeLists.txt
+++ b/Engines/DCap/CMakeLists.txt
@@ -7,16 +7,15 @@ set(ROOT_PATH "/home/pi/Falcon")
 #include_directories(../../Common/EngineFrame/inc ../../Engines/DCap/inc)
 include_directories(${ROOT_PATH}/Common/EngineFrame/inc ${ROOT_PATH}/Common/signal/inc ${ROOT_PATH}/Common/Utils/pugixml/inc ${ROOT_PATH}/Engines/DCap/inc)
 
-
 add_compile_options(-std=c++11)
 
-
 if(UNIX)
-find_library(ENGFRM EngineFrame ${ROOT_PATH}/Libraries/bin)
-find_library(PUGI PugiXML ${ROOT_PATH}/Libraries/bin)
-find_library(SIG signals ${ROOT_PATH}/Libraries/bin)
-#link_directories(${ROOT_PATH}/Libraries/bin)
-add_executable(dcap ./src/dcap.cpp)
+	find_package(Threads REQUIRED)
+	find_library(ENGFRM EngineFrame ${ROOT_PATH}/Libraries/bin)
+	find_library(PUGI PugiXML ${ROOT_PATH}/Libraries/bin)
+	find_library(SIG signals ${ROOT_PATH}/Libraries/bin)
+	#link_directories(${ROOT_PATH}/Libraries/bin)
+	add_executable(dcap ./src/dcap.cpp)
 endif(UNIX)
 
 #find_library(ENGFRM EngineFrame) #HINTS ${ROOT_PATH}/Libraries/bin)
@@ -26,4 +25,4 @@ endif(UNIX)
 
 #target_link_libraries(dcap ${ROOT_PATH}/Libraries/bin/EngineFrame ${ROOT_PATH}/Libraries/bin/PugiXML ${ROOT_PATH}/Libraries/bin/signals)
 
-target_link_libraries(dcap ${ENGFRM} ${PUGI} ${SIG})
+target_link_libraries(dcap ${ENGFRM} ${PUGI} ${SIG} pthread)
