#20 Added cmake windows capability. Now engines and common can be opened in VS

--- a/Libraries/CMakeLists.txt
+++ b/Libraries/CMakeLists.txt
@@ -1,16 +1,18 @@
 cmake_minimum_required(VERSION 3.0)
-message("Building Libraries...")
+message("Building Falcon Libraries...")
 project(falcon)
 
-set(ROOT_PATH "/home/pi/Falcon")
-
 #make a root and direct from there
+IF(WIN32)
+	set(ROOT_PATH "E:/Falcon")
+ELSEIF(UNIX)
+	set(ROOT_PATH "/home/pi/Falcon")	
+ENDIF(WIN32)
+
+
 include_directories(${ROOT_PATH}/Common/EngineFrame/inc ${ROOT_PATH}/Common/signal/inc ${ROOT_PATH}/Common/Utils/pugixml/inc)
 
-#engineframe, pugi, signal
-#file(MAKE_DIRECTORY "bin")
 add_compile_options(-std=c++11)
-#add_library(../../Libraries/bin/oUtil SHARED ../../Common/Utils/shm/src/util.cpp)
 
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${ROOT_PATH}/Libraries/bin)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${ROOT_PATH}/Libraries/bin)
