Added DEBUG compile option. When debug = 0, the exec runs as a daemon. And when debug = 1, the exec runs in TTY.

--- a/Engines/DCap/CMakeLists.txt
+++ b/Engines/DCap/CMakeLists.txt
@@ -11,6 +11,7 @@ ENDIF(WIN32)
 
 include_directories(${ROOT_PATH}/Common/EngineFrame/inc ${ROOT_PATH}/Common/signal/inc ${ROOT_PATH}/Common/Utils/pugixml/inc ${ROOT_PATH}/Engines/DCap/inc)
 
+add_definitions(-DDEBUG=0)
 add_compile_options(-std=c++11)
 
 IF(WIN32)
