Bringing fsock socket API into Falcon

--- a/Libraries/CMakeLists.txt
+++ b/Libraries/CMakeLists.txt
@@ -10,7 +10,7 @@ ELSEIF(UNIX)
 ENDIF(WIN32)
 
 
-include_directories(${ROOT_PATH}/Common/EngineFrame/inc ${ROOT_PATH}/Common/signal/inc ${ROOT_PATH}/Common/Utils/pugixml/inc)
+include_directories(${ROOT_PATH}/Common/EngineFrame/inc ${ROOT_PATH}/Common/signal/inc ${ROOT_PATH}/Common/Utils/pugixml/inc ${ROOT_PATH}/Common/Utils/fsock/inc)
 
 add_compile_options(-std=c++11)
 
@@ -21,3 +21,4 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${ROOT_PATH}/Libraries/bin)
 add_library(EngineFrame SHARED ${ROOT_PATH}/Common/EngineFrame/src/engineFrame.cpp)
 add_library(PugiXML SHARED ${ROOT_PATH}/Common/Utils/pugixml/src/pugixml.cpp)
 add_library(signals SHARED ${ROOT_PATH}/Common/signal/src/signals.cpp)
+add_library(FSOCK SHARED ${ROOT_PATH}/Common/Utils/fsock/src/fsock.cpp)
