#31 RTU now uses new custom fsock API - Tested working

--- a/Engines/RTU/CMakeLists.txt
+++ b/Engines/RTU/CMakeLists.txt
@@ -9,8 +9,9 @@ ELSEIF(UNIX)
 	set(ROOT_PATH "/home/pi/Falcon")	
 ENDIF(WIN32)
 
-include_directories(${ROOT_PATH}/Common/EngineFrame/inc ${ROOT_PATH}/Common/signal/inc ${ROOT_PATH}/Common/Utils/pugixml/inc ${ROOT_PATH}/Engines/RTU/inc)
+include_directories(${ROOT_PATH}/Common/EngineFrame/inc ${ROOT_PATH}/Common/signal/inc ${ROOT_PATH}/Common/Utils/pugixml/inc ${ROOT_PATH}/Engines/RTU/inc ${ROOT_PATH}/Common/Utils/fsock/inc)
 
+add_definitions(-DDEBUG=0)
 add_compile_options(-std=c++11)
 
 IF(WIN32)
@@ -22,6 +23,7 @@ find_package(Threads REQUIRED)
 find_library(ENGFRM EngineFrame ${ROOT_PATH}/Libraries/bin)
 find_library(PUGI PugiXML ${ROOT_PATH}/Libraries/bin)
 find_library(SIG signals ${ROOT_PATH}/Libraries/bin)
+find_library(SOCK FSOCK ${ROOT_PATH}/Libraries/bin)
 add_executable(RTU ./src/RTU.cpp)
 
-target_link_libraries(RTU ${ENGFRM} ${PUGI} ${SIG} pthread)
+target_link_libraries(RTU ${ENGFRM} ${PUGI} ${SIG} ${SOCK} pthread)
