--- a/Engines/DCap/CMakeLists.txt
+++ b/Engines/DCap/CMakeLists.txt
@@ -9,7 +9,7 @@ ELSEIF(UNIX)
 	set(ROOT_PATH "/home/pi/Falcon")	
 ENDIF(WIN32)
 
-include_directories(${ROOT_PATH}/Common/EngineFrame/inc ${ROOT_PATH}/Common/signal/inc ${ROOT_PATH}/Common/Utils/pugixml/inc ${ROOT_PATH}/Engines/DCap/inc)
+include_directories(${ROOT_PATH}/Common/EngineFrame/inc ${ROOT_PATH}/Common/signal/inc ${ROOT_PATH}/Common/Utils/pugixml/inc ${ROOT_PATH}/Engines/DCap/inc ${ROOT_PATH}/Common/Utils/fsock/inc)
 
 add_definitions(-DDEBUG=0)
 add_compile_options(-std=c++11)
@@ -23,7 +23,7 @@ find_package(Threads REQUIRED)
 find_library(ENGFRM EngineFrame ${ROOT_PATH}/Libraries/bin)
 find_library(PUGI PugiXML ${ROOT_PATH}/Libraries/bin)
 find_library(SIG signals ${ROOT_PATH}/Libraries/bin)
-
+find_library(SOCK FSOCK ${ROOT_PATH}/Libraries/bin)
 add_executable(dcap ./src/dcap.cpp)
 
-target_link_libraries(dcap ${ENGFRM} ${PUGI} ${SIG} pthread)
+target_link_libraries(dcap ${ENGFRM} ${PUGI} ${SIG} ${SOCK} pthread)
