--- a/Engines/RTU/CMakeLists.txt
+++ b/Engines/RTU/CMakeLists.txt
@@ -11,7 +11,7 @@ ENDIF(WIN32)
 
 include_directories(${ROOT_PATH}/Common/EngineFrame/inc ${ROOT_PATH}/Common/signal/inc ${ROOT_PATH}/Common/Utils/pugixml/inc ${ROOT_PATH}/Engines/RTU/inc ${ROOT_PATH}/Common/Utils/fsock/inc)
 
-add_definitions(-DDEBUG=0)
+add_definitions(-DDEBUG=1)
 add_compile_options(-std=c++11)
 
 IF(WIN32)
@@ -24,7 +24,7 @@ find_library(ENGFRM EngineFrame ${ROOT_PATH}/Libraries/bin)
 find_library(PUGI PugiXML ${ROOT_PATH}/Libraries/bin)
 find_library(SIG signals ${ROOT_PATH}/Libraries/bin)
 find_library(SOCK FSOCK ${ROOT_PATH}/Libraries/bin)
-add_executable(RTU ./src/RTU.cpp)
+add_executable(RTU ./src/RTU.cpp ./src/Message.cpp)
 
 set_target_properties(RTU PROPERTIES VERSION "0.3")
 
